Description
reactOS 0.4.7RC1
(I know this is broken down to at least 0.4.1rls and suspect it did never work until now)
ros has a dialog to select folders and create new folders somewhere in shell-classes.
I reproduce this with Code Blocks 16.01 from rapps but I guess there are quicker ways for reproduction, feel free to propose quicker reproduction steps:
startup Code Blocks
create a new console project
when naming the project there is a "..." button that opens said shell folder where you can create a new folder
navigate to C:\
Input none or arbitrary text and click "Make new folder" (this text will not be used for creating foldername)
a folder with default name should be created now in FS (does not matter what we type in the box)
Expected result:
- dialog shall notice the file-system change and shall display the folder-template (view refresh)
- newly created folder template is selected and put into "renaming-mode"
Observed result:
dialog does not see the performed FS changes (no explicit view refresh)
we lack selecting the created folder template and enabling the renaming mode
see video.webm![]()
Only log that is generated when pressing "Make new folder"
err:(../../dll/win32/shell32/wine/changenotify.c:174) Not freeing, still 2 queued events
|
err:(../../dll/win32/shell32/wine/changenotify.c:174) Not freeing, still 2 queued events
|
err:(../../dll/win32/shell32/wine/changenotify.c:174) Not freeing, still 2 queued events
|
err:(../../dll/win32/shell32/wine/changenotify.c:174) Not freeing, still 2 queued events
|
err:(../../dll/win32/shell32/wine/changenotify.c:174) Not freeing, still 2 queued events
|
Attachments
Issue Links
- is duplicated by
-
CORE-12618 Explorer actualization problems
-
- Resolved
-
-
CORE-12810 Fixes in BrsFolder_NewFolder()
-
- Resolved
-