[0.4.7] cherry-pick [SHELL32] SHBrowseForFolder: Fix creating a new folder (which was broken two years ago and was properly reported 3 days ago). CORE-13925

(cherry picked from commit dd4af777034d4abae0e461fe663d5479dbbe1715)